--- a/casestudy/src/app/customer/customer-create/customer-create.component.html
+++ b/casestudy/src/app/customer/customer-create/customer-create.component.html
@@ -1,56 +1,69 @@
-<div class="signup-form">
-  <form [formGroup]="customer"(ngSubmit)="getInfoCustomer()">
-    <h2>Register</h2>
-    <p class="hint-text">Create Customer</p>
-    <div class="form-group">
-      <label for="input">code</label>
-      <input type="text" class="form-control" name="code" placeholder="code" formControlName="code">
+<body>
+<h5 style="text-align: center">ADD NEW CUSTOMER</h5>
+<div class="container">
+  <div class="row">
+    <div class="col-3">
     </div>
-    <div class="form-group">
-      <label for="input">name</label>
-      <input type="text" class="form-control" name="name" placeholder="name" formControlName="name">
+    <div class="col-7" style="font-size: 14px">
+      <form [formGroup]="customerFormGroup" (ngSubmit)="submit()">
+        <div class="form-group">
+          IdCustomer:
+          <input type="text" class="form-control input-sm" formControlName="idCustomer">
+          <span style="color: red"
+                *ngIf="customerFormGroup.controls.idCustomer.hasError('pattern')
+         && customerFormGroup.controls.idCustomer.dirty">
+                idCustomer not matching</span>
+        </div>
+        <div class="form-group">
+          Name:
+          <input type="text" class="form-control input-sm" formControlName="name">
+        </div>
+        <div class="form-group">
+          Date of birth:
+          <input type="date" class="form-control input-sm" formControlName="dateOfBirth">
+        </div>
+        <div class="form-group">
+          Id card:
+          <input type="text" class="form-control input-sm" formControlName="idCard">
+          <span style="color: red"
+                *ngIf="customerFormGroup.controls.idCard.hasError('pattern')
+         && customerFormGroup.controls.idCard.dirty">
+                idCard not matching</span>
+        </div>
+        <div class="form-group">
+          Number phone:
+          <input type="text" class="form-control input-sm" formControlName="phone">
+          <span style="color: red"
+                *ngIf="customerFormGroup.controls.phone.hasError('pattern')
+         && customerFormGroup.controls.phone.dirty">
+                phone not matching</span>
+        </div>
+        <div class="form-group">
+          Email:
+          <input type="text" class="form-control input-sm" formControlName="email">
+          <span style="color: red"
+                *ngIf="customerFormGroup.controls.email.hasError('email')
+         && customerFormGroup.controls.email.dirty">
+                email not matching</span>
+        </div>
+        <div class="form-group">
+          Address:
+          <input type="text" class="form-control input-sm" formControlName="address">
+        </div>
+        <div class="form-group">
+          Type customer:
+          <select class="form-control" formControlName="typeCustomer" required>
+            <option *ngFor="let typeCustomer of typeCustomers" [ngValue]="typeCustomer">{{typeCustomer.name}}</option>
+          </select>
+          <p style="color: red"
+             *ngIf="customerFormGroup.hasError('isemptycode',['typeCustomer'])
+      && customerFormGroup.get('typeCustomer').pristine">is Empty</p>
+        </div>
+        <button type="submit" class="btn btn-primary" [disabled]="!customerFormGroup.valid">Add</button>
+        <a type="button" class="btn btn-success" routerLink="/customer/list">Close</a>
+      </form>
     </div>
-    <div class="form-group">
-      <label for="input">Birthday</label>
-      <input type="date" class="form-control" name="Birthday" placeholder="Birthday" formControlName="Birthday">
-    </div>
-    <div class="form-group">
-      <label for="input">Gender</label>
-      <div>
-        <select class="custom-select custom-select-sm" id="input" formControlName="gender" >
-          <option value="Male">Male</option>
-          <option value="Female">Female</option>
-          <option value="Other">Other</option>
-        </select>
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="input">customerIdCard</label>
-      <input type="text" class="form-control" name="customerIdCard" placeholder="customerIdCard" formControlName="customerIdCard">
-
-    </div>
-    <div class="form-group">
-      <label for="input">customerPhone</label>
-      <input type="text" class="form-control" name="customerPhone" placeholder="customerPhone" formControlName="customerPhone">
-    </div>
-    <div class="form-group">
-      <label for="input">email</label>
-      <input type="email" class="form-control" name="email" placeholder="email" formControlName="email">
-    </div>
-    <div class="form-group">
-      <label for="input">customerAddress</label>
-      <input type="text" class="form-control" name="customerAddress" placeholder="customerAddress" formControlName="customerAddress">
-    </div>
-    <div class="form-group">
-      <label>Type customer</label>
-      <div>
-        <select class="form-control"  formControlName="customerType">
-          <option [ngValue]="null" [hidden] ="true">chọn type customer</option>
-        </select>
-      </div>
-    </div>
-    <div class="form-group">
-      <input class="btn btn-danger mt-3" type="submit" value="create">
-    </div>
-  </form>
+  </div>
 </div>
+</body>
+
