--- a/casestudy/src/app/customer/customer-list/customer-list.component.html
+++ b/casestudy/src/app/customer/customer-list/customer-list.component.html
@@ -1,118 +1,87 @@
-<!--<!DOCTYPE html>-->
-<!--<html xmlns:th="http://www.thymeleaf.org">-->
-<!--<head>-->
-<!--  <meta charset="utf-8">-->
-<!--  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
-<!--  <title>Bootstrap Simple Data Table</title>-->
+<body
+  style="height: 600px;background-image: url('https://i.pinimg.com/originals/4c/32/b8/4c32b8c9d316da2348be65685f578264.jpg')">
 
-<!--  <script>-->
-<!--    $(document).ready(function () {-->
-<!--      $('[data-toggle="tooltip"]').tooltip();-->
-<!--    });-->
-<!--  </script>-->
-<!--</head>-->
-<!--<body>-->
-<!--<div class="container-xl">-->
-<!--  <div class="table-responsive">-->
-<!--    <div class="table-wrapper">-->
-<!--      <div class="table-title">-->
-<!--        <p style="color: #005cbf" th:text="${msg}"></p>-->
-<!--        <div class="row">-->
-<!--          <div class="col-sm-8"><h2><b>Customer</b></h2></div>-->
-<!--          <div class="col-sm-4">-->
-<!--            <div class="search-box">-->
-<!--              <form  class="form-inline md-form mr-auto mb-4" >-->
-<!--                <i class="material-icons">&#xE8B6;</i>-->
-<!--                <input class="form-control mr-sm-2" type="text" placeholder="Search" name="search">-->
-<!--                <button class="form-control " type="submit">Search</button>-->
-<!--              </form>-->
-<!--            </div>-->
-<!--            <div class="add-box">-->
-<!--              <a href="/customers/create" class="btn btn-success"><i-->
-<!--                class="material-icons">&#xE147;</i> <span>Add New Customer</span></a>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <table class="table table-striped table-hover table-bordered">-->
-<!--        <thead>-->
-<!--        <tr>-->
-<!--          <th scope="col">STT</th>-->
-<!--          <th scope="col">Customer Code</th>-->
-<!--          <th scope="col">Name</th>-->
-<!--          <th scope="col">Type Customer</th>-->
-<!--          <th scope="col">Gender</th>-->
-<!--          <th scope="col">Email</th>-->
-<!--          <th scope="col">Address</th>-->
-<!--          <th scope="col">View</th>-->
-<!--          <th scope="col">Edit</th>-->
-<!--          <th scope="col">Delete</th>-->
-<!--        </tr>-->
-<!--        </thead>-->
-<!--        <tbody>-->
-<!--        <tr th:each="customer,status : ${customers}">-->
-<!--          <th scope="row" th:text="${status.count}"></th>-->
-<!--          <th th:text="${customer.customerCode}"></th>-->
-<!--          <td th:text="${customer.customerName}"></td>-->
-<!--          <td th:text="${customer.customerType.customerTypeName}"></td>-->
-<!--          <td th:text="${customer.customerGender}"></td>-->
-<!--          <td th:text="${customer.customerEmail}"></td>-->
-<!--          <td th:text="${customer.customerAddress}"></td>-->
-<!--          <td><a href="#" class="view" title="View" data-toggle="tooltip"><i-->
-<!--            class="material-icons">&#xE417;</i></a></td>-->
-<!--          <td><a href="#" class="edit" title="Edit" data-toggle="tooltip"-->
-<!--                 th:href="@{/customers/edit(id=${customer.customerId})}"><i-->
-<!--            class="material-icons">&#xE254;</i></a></td>-->
-<!--          <td>-->
-<!--            <button type="button" class="btn btn-danger buttonDelete" data-toggle="modal"-->
-<!--                    data-target="#exampleModal"-->
-<!--                    th:data1="${customer.customerId}" th:data2="${customer.customerName}"-->
-<!--                    onclick="sendData(this.getAttribute('data1'),this.getAttribute('data2'))">-->
-<!--              Delete-->
-<!--            </button>-->
-<!--          </td>-->
-<!--        </tr>-->
-<!--        </tbody>-->
-<!--      </table>-->
-<!--      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"-->
-<!--           aria-hidden="true">-->
-<!--        <div class="modal-dialog">-->
-<!--          <div class="modal-content">-->
-<!--            <form action="/customers/delete" method="post">-->
-<!--              <div class="modal-header">-->
-<!--                <h5 class="modal-title" id="exampleModalLabel">Delete customer</h5>-->
-<!--                <button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
-<!--                  <span aria-hidden="true">&times;</span>-->
-<!--                </button>-->
-<!--              </div>-->
-<!--              <div class="modal-body">-->
-<!--                Do you want to delete <span style="color: red" id="customerName"></span>???-->
-<!--              </div>-->
-<!--              <div class="modal-footer">-->
-<!--                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
-<!--                <button type="submit" class="btn btn-primary">Delete</button>-->
-<!--                <input type="hidden" id="customerId" name="id">-->
-<!--              </div>-->
-<!--            </form>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div>-->
-<!--        <a class="btn btn-info" th:href="@{/customers(page=${customers.number - 1},keyWord=${search})}"-->
-<!--           th:if="${customers.hasPrevious()}">Previous</a>-->
-<!--        <span th:text="${customers.number+1}"></span>/<span th:text="${customers.totalPages}"></span>-->
-<!--        <a class="btn btn-info" th:href="@{/customers(page=${customers.number + 1},keyWord=${search})}"-->
-<!--           th:if="${customers.hasNext()}">Next</a>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
-<!--<script type="text/javascript">-->
-<!--  function sendData(id, name) {-->
-<!--    document.getElementById("customerName").innerText = name;-->
-<!--    document.getElementById("customerId").value = id;-->
-<!--  }-->
-<!--</script>-->
-<!--</body>-->
-<!--</html>-->
 
+<h1>List Customer</h1>
+
+<div class="container-fluid">
+  <div class="row">
+    <form class="form-inline">
+      Name:
+      <input type="text" class="form-control" placeholder="name" (change)=setNameSearch($event)>
+      Date Of Birth:
+      <input type="date" class="form-control"  (change)=setDOBTo($event)>
+      To:
+      <input type="date" class="form-control"  (change)=setDOBFrom($event)>
+
+
+      <button class="btn btn-success" type="button" (click)="search()">Search</button>
+    </form>
+  </div>
+</div>
+
+<div class="container-fluid" style="height: 340px">
+  <div class="row">
+    <table class="table table-striped">
+      <thead>
+      <tr style="font-size: 22px; font-weight: bold;">
+        <td><a class="btn" (click)="sortId()" style="font-size: 22px; font-weight: bold;">ID <i class="fas fa-sort"></i></a></td>
+        <th>NAME</th>
+        <th>DOB</th>
+        <th>EMAIL</th>
+        <th>TYPE</th>
+        <th colspan="2" style="text-align: center">ACTION</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let customer of customers | slice: (page-1) *  pageSize: page * pageSize">
+        <td>{{customer.idCustomer}}</td>
+        <td>{{customer.name}}</td>
+        <td>{{customer.dateOfBirth}}</td>
+        <td>{{customer.email}}</td>
+        <td>{{customer.typeCustomer.name}}</td>
+        <td>
+          <button type="button" class="btn btn-primary" [routerLink]="['/customer/update',customer.id]">Update</button>
+        </td>
+        <td>
+          <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal"
+                  (click)="passData(customer.id, customer.name)">Delete
+          </button>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+    <ng-container *ngIf="message != ''">
+      <h5 style="text-align: center; color: red; width: 100%; margin-top: 50px">{{message}}</h5>
+    </ng-container>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Delete</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Do you want delete {{nameDelete}}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="deleteById(idDelete)">Delete
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+<div>
+  <ngb-pagination style="margin-left: auto" [collectionSize]="(length/pageSize)*10" [(page)]="page" [maxSize]="1"
+                  [boundaryLinks]="true"></ngb-pagination>
+
+</div>
+</body>
